# Projeto-Aplicado

./: README.md
app/dashboard/: page.tsx
components/dashboard/: shell.tsx
et_wicca_backend/: Cargo.toml  app_database.db  app_database.db-shm  app_database.db-wal
et_wicca_backend/.sqlx/: query-05ffde969188037138bd5bdc73cc4f44f31f2805c0f8b15a67c41152a8f45b5c.json  query-07d11e5a44e7c31bd8050fd8b57e5d90f5264ad63cb72adbb4f647d551629add.json  query-0b9970959c6147bb60560b549c92cfcda203f44ef78d3b4b76da3109999cf163.json  query-19c5f3812021059ae9f89d3ea6b10e59d8ea1f5ebc4e6a029c14f3c27050e3d5.json  query-3119ec23441c21d6d586dea35344b03c406cf71e27997a4e310e820f66f3c213.json  query-4a5f5bca1c5b6ff8a7c485f86fa68476e613f75475b0eed5cc43f10bec5c1338.json  query-50bcfba443d02937471d1002dbb4643af5a31198cdea5deca237da2746e81979.json  query-ccb483a21551adb7d3f87a26df17e30914b8fee766634c79e7e16d34b18dcf4e.json  query-d0cff7f35ff23d08d608651587e16d4a8e252497a1dcc70a67a4f85fe1a20067.json  query-e5c0236c357270e22d78d112b1dda4921ab97759134db74182ceb907ceeb68bf.json  query-ea00e93c5bcc9a7983fdafd87a2f162eafcd89bace2c2f64dea7d8812eae3b7b.json  query-f48a5b575550071b2e4dffdf82a8ff51e4ee7c66b2739a18843d3bfb1ac602eb.json  query-f5d62cd7e3ddc9b0d63b5446303f6a8cc80b5b86c2ebc8fed4c412411b667f73.json
et_wicca_backend/migrations/: 20250609010330_create_users_table.sql  20250609010348_create_app_tables.sql
et_wicca_backend/src/: auth.rs  auth_handlers.rs  database_handlers.rs  graph_schema.rs  hardware_handlers.rs  main.rs  models.rs  network_handlers.rs  software_handlers.rs  state.rs
(+3 files in other folders)
