[package]
name = "et_wicca_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
] }
argon2 = { version = "0.5", features = ["std"] }
jsonwebtoken = "9.3"
chrono = "0.4"
axum-extra = { version = "0.9", features = ["typed-header"] }
rand_core = { version = "0.6", features = ["std"] }
